[FIX] <pro>Table: Fixed a problem that the cell content was wrapped which was a block-level element.

--- a/components-pro/table/style/index.less
+++ b/components-pro/table/style/index.less
@@ -54,7 +54,7 @@
         outline: none;
       }
 
-      &::before {
+      &:empty::before {
         display: inline-block;
         width: 0;
         content: ' ';
